# bioc

./: .coveragerc  .gitattributes  .gitignore  .pylintrc  .travis.yml  LICENSE.txt  README.md  README.rst  circle.yaml  circle.yml  environment2.yml  environment3.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: pytest.yml  pythonpackage.yml  validate_schema.yml
bak/: .travis.yml  README.rst  encoder.py  encoder2.py  everything_v2.xml  pypi.yml  setup.py  test_xml_encoder2.py
bioc/: __init__.py  bioc.py  biocitertools.py  biocitr.py  constants.py  decoder.py  encoder.py  iterator.py  iterdecoder.py  iterencoder.py  iterparse.py  iterwriter.py  jsondecoder.py  jsonencoder.py  utils.py  validator.py
bioc/bioc/: __init__.py  bioc.py  biocio.py  biocitertools.py  constants.py
bioc/bioc/biocjson/: decoder.py  encoder.py
bioc/bioc/biocxml/: __init__.py  decoder.py  encoder.py  encoder2.py
bioc/biocjson/: __init__.py  decoder.py  encoder.py
bioc/biocxml/: __init__.py  decoder.py  decoder2.py  encoder.py  encoder2.py
bioc/brat/: __init__.py  brat.py  decoder.py  encoder.py  validator.py
bioc/pubtator/: __init__.py  decoder.py  encoder.py  pubtator.py
bioc/tools/: brat2bioc.py  pubtator2bioc.py  split.py  validate_dtd.py  validate_xsd.py
biocjson/: __init__.py  jsondecoder.py  jsonencoder.py
docs/: requirements.txt
docs/source/: bioc.md  biocjson.md  biocxml.md  brat.md  code_of_conduct.md  conf.py  contribute.md  developer_guide.md  index.rst  install.md  pubtator.md  reference.md
schema/: README.md  bioc_schema.json  bioc_v1.dtd  bioc_v1.xsd  bioc_v2.dtd  bioc_v2.xsd
src/bioc/: __init__.py  bioc.py  biocio.py  biocitertools.py  constants.py  datastructure.py  utils.py  validator.py
src/bioc/biocjson/: __init__.py  decoder.py  encoder.py
src/bioc/biocxml/: __init__.py  decoder.py  decoder2.py  encoder.py
src/bioc/brat/: __init__.py  brat.py  datastructure.py  decoder.py  encoder.py  validator.py
src/bioc/cli/: brat2bioc.py  split_bioc.py
src/bioc/pubtator/: __init__.py  datastructure.py  decoder.py  encoder.py  pubtator.py  validator.py
src/bioc/tools/: brat2bioc.py  pubtator2bioc.py  split.py
tests/: context.py  utils.py
tests/bioc/: everything.json  everything.jsonl  everything.xml  test_bioc.py  test_biocannotation.py  test_bioclocation.py  test_biocnode.py  test_biocpassage.py  test_biocrelation.py  test_biocsentence.py  test_infonsmaxin.py  test_iterator.py  test_iterparse.py  test_iterwrite.py  test_iterwriter.py  test_json.py  test_json_decoder.py  test_json_encoder.py  test_jsoniter.py  test_jsonlines.py  test_utils.py  test_validator.py  test_xml_decoder.py  test_xml_decoder2.py  test_xml_encoder.py  test_xml_encoder2.py  utils.py
tests/biocjson/: everything.json  test_json.py  test_jsoniter.py
tests/brat/: example1.ann  example1.txt  test_brat.py  test_brat2bioc.py  test_bratattribute.py  test_bratdocument.py  test_bratentity.py  test_bratequivrelation.py  test_bratevent.py  test_bratnote.py  test_bratrelation.py  test_io.py  test_validator.py
tests/pubtator/: test_file.py  test_io.py  test_pubtator.py  test_validate.py  tmVar.Normalization.txt
tests/tools/: test_brat2bioc.py  test_pubtator2bioc.py  test_split.py
