[metadata]
name = bioc
author = Yifan Peng
author_email = yifan.peng@nih.gov
url = https://github.com/yfpeng/bioc
description = BioC data structures and encoder/decoder for Python
long_description = file: README.rst
keywords = bioc
license = BSD 3-Clause License
platforms = any
classifier =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Topic :: Text Processing :: Markup :: XML
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks
