[metadata]
name = bioc
# Versions should comply with PEP440.  For a discussion on single-sourcing
# the version across setup.py and the project code, see
# https://packaging.python.org/en/latest/single_source_version.html
version = 2.0.dev4
# Author details
author = Yifan Peng
author_email = yip4002@med.cornell.edu
description = BioC data structures and encoder/decoder for Python
long_description = file: README.md
long_description_content_type = text/markdown
# The project's main homepage.
url = https://github.com/bionlplab/bioc'
license = MIT License
keywords = bioc, brat, pubtator
# See https://pypi.org/classifiers/
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Text Processing :: Markup :: XML
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
python_requires = >=3.6
package_dir =
    =src
packages = find:
install_requires =
    lxml>=4.6.3
    jsonlines>=1.2.0
    tqdm
    intervaltree

[options.packages.find]
exclude =
    tests.*
    tests

[options.extras_require]
rest = docutils>=0.15.2

[options.entry_points]
console_scripts =
    bioc-split = bioc.tools.split:main
